# FastAPI_template

./: .env.example  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/api/auth/: router.py  schemas.py  services.py
app/api/users/: models.py  repository.py  router.py  schemas.py  services.py
app/auth/: router.py  schemas.py  services.py
app/dependencies/: auth.py  services.py
app/exceptions/: exceptions.py
app/interfaces/: repository.py  unit_of_work.py
app/migrations/: env.py
app/migrations/versions/: 18fa82a22733_ref.py  b5125c4dfeef_initial_migration.py  b6616d7c1b13_init.py
app/repositories/: base_repository.py
app/unit_of_work/: unit_of_work.py
app/users/: models.py  repository.py  router.py  schemas.py  services.py
